商品の一覧表示

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,34 +126,28 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+    <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
-        <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
-
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
+        <%= link_to '#' do%>
+          <div class='item-img-content'>
+            <%= image_tag item.image, class: "item-img" %>
+          <%# <div class='sold-out'><span>Sold Out!!</span></div> %>
           </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
-
-        </div>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            <%= "商品名" %>
-          </h3>
-          <div class='item-price'>
-            <span><%= "販売価格" %>円<br>(税込み)</span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
+          <div class='item-info'>
+            <h3 class='item-name'>
+              <%= item.name %>
+            </h3>
+            <div class='item-price'>
+              <span><%= item.price %>円<br>(税込み)</span>
+              <div class='star-btn'>
+                <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
             </div>
           </div>
         </div>
-        <% end %>
-      </li>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% end %>
+    </li>
+    <% end %>
 
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
@@ -178,14 +172,13 @@
       <%# /商品がない場合のダミー %>
     </ul>
   </div>
-  <%# /商品一覧 %>
 </div>
 <% if user_signed_in? %>
-<div class='purchase-btn'>
-  <span class='purchase-btn-text'>出品する</span>
-  <a href= /items/new>
-    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </a>
-</div>
+  <div class='purchase-btn'>
+    <span class='purchase-btn-text'>出品する</span>
+    <a href= /items/new>
+      <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+    </a>
+  </div>
 <% end %>
 <%= render "shared/footer" %>
