--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,7 +129,7 @@
     <% if @items %>
     <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to '#' do%>
+        <%= link_to item_path(item.id), method: :get do%>
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
           <%# <div class='sold-out'><span>Sold Out!!</span></div> %>
