--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -80,27 +80,6 @@ app/assets/stylesheets/items/new.css %>
         <span>販売価格<br>(¥300〜9,999,999)</span>
         <a class="question" href="#">?</a>
       </div>
-      <script type="text/javascript">
-        function calculation() {
-          const priceEv = document.getElementById("item-price");
-          priceEv.addEventListener('input', function(){
-            let price = document.getElementById("item-price").value;
-            let tax = document.getElementById("add-tax-price");
-            let profit = document.getElementById("profit");
-            let taxCal = parseInt(price, 10) * 10 / 100;
-            let profitCal = parseInt(price, 10) - taxCal;
-            tax.innerHTML = taxCal;
-            profit.innerHTML = profitCal;
-          })
-          window.name = "";
-        }
-        window.addEventListener('load', calculation)
-        if (window.name != "reload")
-        {
-          location.reload();
-          window.name = "reload";
-        }
-      </script>
       <div>
         <div class="price-content">
           <div class="price-text">
@@ -109,6 +88,7 @@ app/assets/stylesheets/items/new.css %>
           </div>
           <span class="sell-yen">¥</span>
           <%= f.text_field :price, class:"price-input", id:"item-price", placeholder:"例）300" %>
+          <script type="text/javascript" src="js/item.js"></script>
         </div>
         <div class="price-content">
           <span>販売手数料 (10%)</span>
