--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -33,7 +33,8 @@
     </div>
     <%# /支払額の表示 %>
 
-  <%= form_with model: @order_sending_destination, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+  <%= form_with url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= render 'shared/error_messages', model: @order_sending_destination%>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
         クレジットカード情報入力
