--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/second-header"%>
 
 
-<%= form_with (model: @item, class: 'registration-main', local: true) do |f| %>
+<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 
 <div class='form-wrap'>
   <div class='form-header'>
@@ -11,7 +11,7 @@
   </div>
 
 
-  <%= render 'shared/error_messages', model: f.object %>
+  <%= render 'shared/error_messages', model: @user %>
 
 
   <div class="form-group">
