--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,8 +132,9 @@
         <%= link_to item_path(item.id), method: :get do%>
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
-          <%# <div class='sold-out'><span>Sold Out!!</span></div> %>
-          </div>
+            <% if item.order != nil %>
+              <div class='sold-out'><span>Sold Out!!</span></div> 
+            <% end %>
           <div class='item-info'>
             <h3 class='item-name'>
               <%= item.name %>
