--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,11 +7,11 @@
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image, class:"item-box-img" %>
-      <%# 商品が売れている場合は、sold outを表示しましょう %>
+      <% if @item.order != nil %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
       </div>
-      <%# //商品が売れている場合は、sold outを表示しましょう %>
+      <% end %>
     </div>
     <div class="item-price-box">
       <span class="item-price">
@@ -21,6 +21,7 @@
         (税込) 送料込み
       </span>
     </div>
+    <% unless @item.order != nil %>
     <% if user_signed_in? %>
     
       <% if user_signed_in? && current_user.id == @item.user_id %>
@@ -30,11 +31,12 @@
       <%= link_to '削除', item_path(@item.id), method: :delete, class:'item-destroy' %>
 
       <% end %>
-
+    
       <% if user_signed_in? && current_user.id != @item.user_id %>
       <%= link_to '購入画面に進む', item_orders_path(@item.id), class:"item-red-btn"%>
       <% end %>
 
+    <% end %>
     <% end %>
 
     <div class="item-explain-box">
